# ruffini2

./: .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
data/save/: save.cfg
header/: animation.h  button.h  enemy.h  engine.h  fireball.h  iceball.h  menuState.h  pauseState.h  playState.h  player.h  shield.h  stateMachine.h  vector2d.h
src/: animation.cpp  button.cpp  enemy.cpp  main.cpp  menu_state.cpp  pause_state.cpp  play_state.cpp  player.cpp
